<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">My Application</string>
    <string name="forgot"><u>Forgot password ?</u></string>
    <string name="hello">Hello</string>
    <string name="hello2">Hello World !</string>
    <string name="home">Home</string>
    <string name="car">Cars</string>
    <string name="setting">Settings</string>
    <string name="acount">Acount</string>
    <string name="explore">Explore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notifications">Notifications</string>

    <string name="Item_title_1">Choose What Your Car Needs</string>
    <string name="Item_title_2">Rent Your Favourite Car Easily</string>
    <string name="Item_title_3">Book Now And Get Started !</string>
    <string name="Item_title_4">Choose Your Driven Car Type</string>
    <string name="Item_title_5">Pick &amp; Drop Services For Your Car !</string>
    <string name="Item_Desc_1">Select car, date &amp; time and your location to connect you with available car !</string>
    <string name="Item_Desc_2">Enjoy A High Quality Car Comes To Your Location During At Short Time .</string>
    <string name="Item_Desc_3"> Find reliable car &amp; Meet the nearest available car in your current location .</string>
    <string name="Item_Desc_4">With Car Book Your Favourite Car At Cool Prices &amp; Excellent Services . </string>
    <string name="Item_Desc_5">Enjoy Airport Transfers Free Extras And Excellent Services With Meet .</string>
    <string name="next">Next</string>
    <string name="create">Don\'t have an account ? \u0020</string>
    <string name="login_page">Login Page</string>
    <string name="pleas_login_to_your_account">Pleas Login To Your Account</string>
    <string name="email">Email Or Phone Number :</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="password">Password :</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="remember_me">Remember me</string>
    <string name="login">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="register_page">Register Page</string>
    <string name="pleas_create_your_account">Pleas Create Your Account</string>
    <string name="full_name">Full Name :</string>
    <string name="enter_your_full_name">Enter Your Full Name</string>
    <string name="phone_number">Phone Number :</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="register">Sing Up</string>
    <string name="already_have_an_account">Already Have An Account ? \u0020</string>
    <string name="sign_in">Sign In</string>
    <string name="confirm_password">Confirm Password :</string>
    <string name="confirm_your_password">Confirm Your Password</string>
    <string name="please_wait_while_redirecting">Please wait while redirecting...</string>
</resources>